testsuite/tests/typecheck/should_fail/UnliftedNewtypesUnassociatedFamilyFail.stderr

UnliftedNewtypesUnassociatedFamilyFail.hs:21:30: error:
    • Couldn't match kind ‘t’ with ‘'IntRep’
      Expected a type, but ‘Int#’ has kind ‘TYPE 'IntRep’
      ‘t’ is a rigid type variable bound by
        a family instance declaration
        at UnliftedNewtypesUnassociatedFamilyFail.hs:21:1-33
    • In the type ‘Int#’
      In the definition of data constructor ‘MkDF1a’
      In the newtype instance declaration for ‘DF’

UnliftedNewtypesUnassociatedFamilyFail.hs:22:30: error:
    • Couldn't match kind ‘t’ with ‘'WordRep’
      Expected a type, but ‘Word#’ has kind ‘TYPE 'WordRep’
      ‘t’ is a rigid type variable bound by
        a family instance declaration
        at UnliftedNewtypesUnassociatedFamilyFail.hs:22:1-34
    • In the type ‘Word#’
      In the definition of data constructor ‘MkDF2a’
      In the newtype instance declaration for ‘DF’

UnliftedNewtypesUnassociatedFamilyFail.hs:23:30: error:
    • Couldn't match kind ‘t’ with ‘'TupleRep '[ 'IntRep, 'WordRep]’
      Expected a type,
        but ‘(# Int#, Word# #)’ has kind ‘TYPE
                                            ('TupleRep '[ 'IntRep, 'WordRep])’
      ‘t’ is a rigid type variable bound by
        a family instance declaration
        at UnliftedNewtypesUnassociatedFamilyFail.hs:23:1-46
    • In the type ‘(# Int#, Word# #)’
      In the definition of data constructor ‘MkDF3a’
      In the newtype instance declaration for ‘DF’
